Finished Customization/Login Base

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -22,7 +22,7 @@
         <a href="/">Home</a>
         <a href="/all">All Users / Discords</a>
         <a href="https://twitter.com/ponparpanpor">Contact</a>
-        <a href="/login">Login</a>
+        <a href="/login">Customize My Card</a>
     </div>
 <div class="flex-container">
     <div class="main statelist">
@@ -34,10 +34,10 @@
                 <a class="ak" href="/states/Alaska">Alaska</a>
             </li>
             <li>
-                <a class="ar" href="/states/Arizona">Arizona</a>
+                <a class="az" href="/states/Arizona">Arizona</a>
             </li>
             <li>
-                <a class="az" href="/states/Arkansas">Arkansas</a>
+                <a class="ar" href="/states/Arkansas">Arkansas</a>
             </li>
             <li>
                 <a class="ca" href="/states/California">California</a>
@@ -184,8 +184,8 @@
         </ul>
     </div>
     <div class="main-right">
-        <a class="btn" href="/submit">Add / Update User!</a>
-        <a class="btn-above" href="https://discord.gg/PsjKSvR4WS">My Discord</a>
+        <a class="btn" href="/login">Add Yourself / Customize!</a>
+        <a class="btn-above" href="https://discord.gg/PsjKSvR4WS">Development Discord</a>
         <br><br>
         </ul>
     </div>
