New User Fix + Better Font

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 <link rel="icon" href="web/media/favicon.png" type="image/x-icon"/>
 <link rel="stylesheet" type="text/css" href="web/css/flags.css" />
 <link rel="stylesheet" type="text/css" href="web/css/main.css" />
@@ -25,7 +25,7 @@
         <a href="/login">Customize My Card</a>
     </div>
 <div class="flex-container">
-    <div class="main statelist">
+    <div class="main statelist black-font">
         <ul>
             <li>
                 <a class="al" href="/states/Alabama">Alabama</a>
@@ -104,7 +104,7 @@
             </li>
         </ul>
     </div>
-    <div class="main statelist">
+    <div class="main statelist black-font">
         <ul>
             <li>
                 <a class="mt" href="/states/Montana">Montana</a>
