--- a/web/html/index.html
+++ b/web/html/index.html
@@ -60,16 +60,16 @@
                 <a class="hi" href="/states/Hawaii">Hawaii</a>
             </li>
             <li>
-                <a class="ia" href="/states/Idaho">Idaho</a>
+                <a class="id" href="/states/Idaho">Idaho</a>
             </li>
             <li>
-                <a class="id" href="/states/Illinois">Illinois</a>
+                <a class="il" href="/states/Illinois">Illinois</a>
             </li>
             <li>
-                <a class="il" href="/states/Indiana">Indiana</a>
+                <a class="in" href="/states/Indiana">Indiana</a>
             </li>
             <li>
-                <a class="in" href="/states/Iowa">Iowa</a>
+                <a class="ia" href="/states/Iowa">Iowa</a>
             </li>
             <li>
                 <a class="ks" href="/states/Kansas">Kansas</a>
