--- a/web/html/index.html
+++ b/web/html/index.html
@@ -103,7 +103,7 @@
             </li>
         </ul>
     </div>
-    <div class="main statelist black-font">
+    <div class="main statelist mobile-state-bottom black-font">
         <ul>
             <li>
                 <a class="mt" href="/states/Montana">Montana</a>
