--- a/web/html/index.html
+++ b/web/html/index.html
@@ -191,5 +191,5 @@
 </div>
     
 </body>
-
+<footer><a class="btn-left hide-on-mobile" href="https://ko-fi.com/ponpar">Buy me a coffee!</a></footer>
 </html>
