QOL Changes + Cleanup

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -183,6 +183,11 @@
         </ul>
     </div>
     <div class="main-right">
+        <h2>Welcome to the (unofficial) State osu Leaderboard!</h2>
+        <p>The intention of this site is to allow users to compare themselves on a more local level, as well as connect players that live near each other!</p>
+        <p>A "✓" next to a user's state means they added themself to the website and confirmed their state selection.</p>
+        <p>A "✓" next to a user's discord tag means they connected their discord account using the "-link [osuid]" command through botbar.</p>
+        <p>If a state has a discord server, it will appear in the top bar on that state's leaderboard page. If there isn't one, try asking some of the players in that state if it is invite only/needs to be created.</p>
         <a class="btn" href="/login">Add Yourself / Customize!</a>
         <a class="btn-above" href="https://discord.gg/PsjKSvR4WS">Development Discord</a>
         <br><br>
