--- a/web/html/index.html
+++ b/web/html/index.html
@@ -2,7 +2,9 @@
 <html>
 <title>State Ranking Leaderboard</title>
 <meta charset="UTF-8" />
+<meta name="google-site-verification" content="google-site-verification=7UqEAcOqgoGoEvstmHj0qHwMjRWkMEPSNNgxYCFb6LI"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="A leaderboard for osu players split into each state." />
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 <link rel="icon" href="web/media/favicon.png" type="image/x-icon"/>
@@ -12,7 +14,7 @@
 <link rel="stylesheet" type="text/css" href="web/css/normalize.css" />
 <meta property="og:type" content="website">
 <meta property="og:title" content="State Leaderboard" />
-<meta property="og:description" content="A leaderboard for osu players split into each state" />
+<meta property="og:description" content="A leaderboard for osu players split into each state." />
 <meta property="og:url" content="https://pupper.moe" />
 <meta property="og:image" content="full thumbnail path" />
 
