Remove BWS Ranking + Tutorial

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -24,9 +24,10 @@
         <a href="/">Home</a>
         <a href="/all">All Users / Discords</a>
         <a href="https://twitter.com/ponparpanpor">Contact</a>
+        <a href="/tutorial">How to Verify Your Discord</a>
     </div>
 <div class="flex-container">
-    <div class="main statelist black-font">
+    <div class="main statelist">
         <ul>
             <li>
                 <a class="al" href="/states/Alabama">Alabama</a>
@@ -105,7 +106,7 @@
             </li>
         </ul>
     </div>
-    <div class="main statelist mobile-state-bottom black-font">
+    <div class="main statelist mobile-state-bottom">
         <ul>
             <li>
                 <a class="mt" href="/states/Montana">Montana</a>
@@ -190,8 +191,8 @@
         <p>A "✓" next to a user's state means they added themself to the website and confirmed their state selection.</p>
         <p>A "✓" next to a user's discord tag means they connected their discord account using the "-link [osuid]" command through botbar.</p>
         <p>If a state has a discord server, it will appear in the top bar on that state's leaderboard page. If there isn't one, try asking some of the players in that state if it is invite only/needs to be created.</p>
-        <a class="btn" href="/login">Add Yourself / Customize!</a>
-        <a class="btn-above" href="https://discord.gg/PsjKSvR4WS">Development Discord</a>
+        <a class="btn-above" href="/login">Login</a>
+        <a class="btn" href="https://discord.gg/PsjKSvR4WS">Development Discord</a>
         <br><br>
         </ul>
     </div>
