--- a/web/html/index.html
+++ b/web/html/index.html
@@ -191,7 +191,7 @@
         <p>A "✓" next to a user's state means they added themself to the website and confirmed their state selection.</p>
         <p>A "✓" next to a user's discord tag means they connected their discord account using the "-link [osuid]" command through botbar.</p>
         <p>If a state has a discord server, it will appear in the top bar on that state's leaderboard page. If there isn't one, try asking one of the players in that state if it is invite only/needs to be created.</p>
-        <a class="btn-above" href="/login">Login</a>
+        <a class="btn-above" href="/login">Login + Add Yourself</a>
         <a class="btn" href="https://discord.gg/PsjKSvR4WS">Development Discord</a>
         <br><br>
         </ul>
