--- a/web/html/index.html
+++ b/web/html/index.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="State Leaderboard" />
 <meta property="og:description" content="A leaderboard for osu players split into each state." />
-<meta property="og:url" content="https://pupper.moe" />
+<meta property="og:url" content="https://states.osutools.com" />
 <meta property="og:image" content="full thumbnail path" />
 
 
