Final URL Change + N/S California

--- a/web/html/submit.html
+++ b/web/html/submit.html
@@ -16,7 +16,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="State Leaderboard Submissions" />
 <meta property="og:description" content="Add yourself to the leaderboard!" />
-<meta property="og:url" content="https://pupper.moe" />
+<meta property="og:url" content="https://states.osutools" />
 <meta property="og:image" content="full thumbnail path" />
 
 <body>
